# PDC-project-2020Spring

./: .gitignore  CMakeLists.txt  LICENSE  README.md  report.md  short-survey.md
presult/: res0.txt  res1.txt  res2.txt  res3.txt  res4.txt  res5.txt  res6.txt
report/: ShortSurvey.md  report.md  showimg.py
src/: parallel.cc  serial.cc
sresult/: res1.txt  res2.txt  res5.txt  res6.txt
